# large-microsrvices-system

./: .opencode.yaml  ANALYSIS_REPORT.md  Makefile  README.md  docker-compose.infra.yml  docker-compose.yml
.github/workflows/: ci.yml
k8s/: namespace.yaml
k8s/configmaps/: platform-config.yaml
k8s/helm/: Chart.yaml  values.yaml
k8s/helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  (+1 more)
k8s/ingress/: platform-ingress.yaml
k8s/secrets/: platform-secrets.yaml
k8s/services/: api-gateway.yaml  auth-service.yaml
monitoring/prometheus/: prometheus.yml
scripts/: health-check.sh  seed-data.sh  setup.sh
services/analytics-service/: Dockerfile  pom.xml
services/api-gateway/: Dockerfile  go.mod  go.sum
services/auth-service/: Dockerfile  pom.xml
services/document-ingestion/: Dockerfile  go.mod
services/document-processing/: Dockerfile  requirements.txt
services/frontend/: Dockerfile  nginx.conf  package.json
services/notification-service/: Dockerfile  go.mod  go.sum
services/orchestration-service/: Dockerfile  requirements.txt
services/search-service/: Cargo.toml  Dockerfile
services/search-service/src/: config.rs  lib.rs  main.rs
services/search-service/src/api/: handlers.rs
services/search-service/src/db/: elastic.rs  mod.rs  qdrant.rs
services/search-service/src/models/: mod.rs
services/search-service/src/services/: search.rs
services/search-service/tests/: health_test.rs
services/user-service/: Dockerfile  pom.xml
terraform/: main.tf  outputs.tf  secrets.tf  variables.tf
(+97 files in other folders)
