[package]
name = "search-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tonic = "0.11"
prost = "0.12"
qdrant-client = "1.7"
elasticsearch = "8.11"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"
opentelemetry = { version = "0.21", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.14", features = ["grpc-tonic"] }
prometheus = { version = "0.13", features = ["process"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.15"
config = "0.14"
schemars = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
once_cell = "1"

[build-dependencies]
tonic-build = "0.11"

[lib]
name = "search_service"
path = "src/lib.rs"

[[bin]]
name = "search-server"
path = "src/main.rs"
